update(), get() for all existing types added
